--- a/main.html
+++ b/main.html
@@ -7,14 +7,22 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel= "stylesheet" href="css/style.css">
+    <link rel= "stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="nav-link active" href="main.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="#">Link</a>
+    </nav>
+    <div class="container-fluid">
           <h1>Hewwo</h1>
       <p>I'm trying to get css to work here, pls bear with me uwu</p>
+      <p>O shit the new font works look at that bois</p>
+      <p>is it   r e s p o n s i v e   yet</p>
       </div>
 
 
