--- a/main.html
+++ b/main.html
@@ -19,11 +19,13 @@
       <a class="nav-link" href="#">Link</a>
     </nav>
     <div class="container-fluid">
+      <div class="row align-items-center">
+        <div class="col-md-6">
           <h1>Hewwo</h1>
-      <p>I'm trying to get css to work here, pls bear with me uwu</p>
-      <p>O shit the new font works look at that bois</p>
-      <p>is it   r e s p o n s i v e   yet</p>
+          <p>gOSHdarn how do i align</p>
+        </div>
       </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
