--- a/main.html
+++ b/main.html
@@ -18,12 +18,10 @@
       <a class="nav-link" href="about.html">About</a>
       <a class="nav-link" href="#">Link</a>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
           <h1>Hewwo</h1>
-      <p>I'm trying to get css to work here, pls bear with me uwu</p>
-      <p>O shit the new font works look at that bois</p>
-      <p>is it   r e s p o n s i v e   yet</p>
-      </div>
+          <p>this is a website uwu</p>
+        </div>
 
 
     <!-- Optional JavaScript -->
