--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
     <div class="container-fluid">
       <p>who gives a fucc lol</p>
     </div>
-
+    <footer class="footer text-center">
+      <p>Copyright me 2018 pls no copy tho</p>
+    </footer>
   </body>
 </html>
