--- a/main.html
+++ b/main.html
@@ -18,23 +18,14 @@
       <a class="nav-link" href="about.html">About</a>
       <a class="nav-link" href="#">Link</a>
     </nav>
-<<<<<<< HEAD
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center" id="blurb">
           <h1>Hewwo</h1>
           <p>this is a website uwu</p>
         </div>
-=======
-    <div class="container-fluid">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <h1>Hewwo</h1>
-          <p>gOSHdarn how do i align</p>
-        </div>
-      </div>
-    </div>
->>>>>>> 840ef15c7a5134a876ed3744765ddafb74f6b158
 
-
+    <footer class="footer text-center">
+      <p>Copyright me 2018 pls no copy tho</p>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
