added designs page

--- a/designs.html
+++ b/designs.html
@@ -15,11 +15,11 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="nav-link" href="main.html">Home</a>
-      <a class="nav-link active" href="about.html">About</a>
-      <a class="nav-link" href="designs.html">Designs</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link active" href="designs.html">Designs</a>
     </nav>
     <div class="container-fluid">
-      <p>who gives a fucc lol</p>
+      <p>imma put some pics here</p>
     </div>
     <footer class="footer text-center">
       <p>Copyright me 2018 pls no copy tho</p>
