--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="nav-link active" href="main.html">Home</a>
       <a class="nav-link" href="about.html">About</a>
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="designs.html">Designs</a>
     </nav>
     <div class="container-fluid text-center" id="blurb">
           <h1>Hewwo</h1>
