--- a/designs.html
+++ b/designs.html
@@ -13,15 +13,28 @@
     <title>About</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="nav-link" href="main.html">Home</a>
-      <a class="nav-link" href="about.html">About</a>
-      <a class="nav-link active" href="designs.html">Designs</a>
+    <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
+      <div class="container-fluid">
+        <!--Logo area-->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <!--Links-->
+        <div id="main-menu" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a class="nav-link" href="main.html">home</a></li>
+            <li><a class="nav-link" href="about.html">about</a></li>
+            <li><a class="nav-link active" href="designs.html">designs</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <div class="container-fluid">
       <p>imma put some pics here</p>
     </div>
-    <footer class="footer text-center">
+    <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
     </footer>
   </body>
