--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel= "stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>hullo</title>
+    <link rel="icon" href="icon.png">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
