--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <!--Links-->
         <div id="main-menu" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a class="nav-link" href="main.html">home</a></li>
+            <li><a class="nav-link" href="index.html">home</a></li>
             <li><a class="nav-link active" href="about.html">about</a></li>
             <li><a class="nav-link" href="designs.html">designs</a></li>
           </ul>
