--- a/designs.html
+++ b/designs.html
@@ -32,8 +32,31 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <p>imma put some pics here</p>
+    <div class="container">
+      <div class="jumbotron">
+        <div class="carousel slide" data-ride="carousel" id="img_carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
+            </div>
+          </div>
+          <a class="carousel-control-next" href="#img_carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+          <a class="carousel-control-prev" href="#img_carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
+            <span class="sr-only">Prev</span>
+          </a>
+        </div>
+      </div>
+      <p class="text-center">i n f i n i t e &nbsp; b u l b a s a u r </p>
     </div>
     <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
