fixed giant bulbasaur

--- a/designs.html
+++ b/designs.html
@@ -56,7 +56,7 @@
           </a>
         </div>
       </div>
-      <p class="text-center">i n f i n i t e &nbsp; b u l b a s a u r </p>
+      <p class="text-center" id="infbulb">i n f i n i t e &nbsp; b u l b a s a u r </p>
     </div>
     <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
