homescreen uses cards now

--- a/index.html
+++ b/index.html
@@ -18,26 +18,43 @@
       <div class="container-fluid">
         <!--Logo area-->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-        <!--Links-->
-        <div id="main-menu" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a class="nav-link active" href="index.html">home</a></li>
-            <li><a class="nav-link" href="about.html">about</a></li>
-            <li><a class="nav-link" href="designs.html">designs</a></li>
-          </ul>
+          <img src="icon.png">
         </div>
       </div>
     </nav>
-    <div class="container-fluid text-center" id="blurb">
-          <h1>Sup</h1>
-          <p>this website is under construction, in the meantime pls enjoy this shitty pic of bulbasaur that I drew</p>
-          <img src="shitty_bulbasaur.png" alt="this is a badly drawn picture of bulbasaur">
-        </div>
+    <div class="jumbotron" id="main-cards">
+        <div class="card-deck">
+          <a class="card text-center" id="card-about" href="about.html">
+            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">about</h5>
+              </div>
+            </a>
+          <a class="card text-center" id="card-designs" href="designs.html">
+            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">designs</h5>
+              </div>
+          </a>
+          <a class="card text-center" id="card-projects">
+            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">projects</h5>
+              </div>
+          </a>
+          <a class="card text-center" id="card-other">
+            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">other stuff</h5>
+              </div>
+          </div>
+        </a>
+    </div>
+    <blockquote id="quote">
+      <p>1, 2, 3, 4, how many shitty_bulbasaur are in my store?</p>
+    </blockquote>
 
+    </div>
     <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
     </footer>
