now cards are centered

--- a/index.html
+++ b/index.html
@@ -22,39 +22,40 @@
         </div>
       </div>
     </nav>
-    <div class="jumbotron" id="main-cards">
-        <div class="card-deck">
-          <a class="card text-center" id="card-about" href="about.html">
-            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">about</h5>
-              </div>
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="jumbotron" id="main-cards">
+          <div class="card-deck">
+            <a class="card text-center" id="card-about" href="about.html">
+              <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">about</h5>
+                </div>
+              </a>
+            <a class="card text-center" id="card-designs" href="designs.html">
+              <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">designs</h5>
+                </div>
             </a>
-          <a class="card text-center" id="card-designs" href="designs.html">
-            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">designs</h5>
-              </div>
-          </a>
-          <a class="card text-center" id="card-projects">
-            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">projects</h5>
-              </div>
-          </a>
-          <a class="card text-center" id="card-other">
-            <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">other stuff</h5>
-              </div>
+            <a class="card text-center" id="card-projects">
+              <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">projects</h5>
+                </div>
+            </a>
+            <a class="card text-center" id="card-other">
+              <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">other stuff</h5>
+                </div>
+            </a>
           </div>
-        </a>
+      </div>
+
     </div>
     <blockquote id="quote">
       <p>1, 2, 3, 4, how many shitty_bulbasaur are in my store?</p>
     </blockquote>
-
-    </div>
     <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
     </footer>
