--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <h5 class="card-title">about</h5>
                 </div>
               </a>
-            <a class="card text-center" id="card-designs" href="designs.html">
+            <a class="card text-center" id="card-designs" href="designs\designs.html">
               <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">designs</h5>
