--- a/projects/projects.html
+++ b/projects/projects.html
@@ -10,7 +10,7 @@
     <link rel= "stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-    <title>designs</title>
+    <title>about</title>
     <link rel="icon" href="icon.png">
   </head>
   <body>
@@ -27,36 +27,14 @@
           <ul class="nav navbar-nav">
             <li><a class="nav-link" href="index.html">home</a></li>
             <li><a class="nav-link" href="about.html">about</a></li>
-            <li><a class="nav-link active" href="designs.html">designs</a></li>
+            <li><a class="nav-link" href="designs\designs.html">designs</a></li>
+            <li><a class="nav-link active" href="projects\projects.html">designs</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container">
-      <div class="jumbotron">
-        <div class="carousel slide" data-ride="carousel" id="img_carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
-            </div>
-          </div>
-          <a class="carousel-control-next" href="#img_carousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          <a class="carousel-control-prev" href="#img_carousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
-            <span class="sr-only">Prev</span>
-          </a>
-        </div>
-      </div>
-      <p class="text-center" id="infbulb">i n f i n i t e &nbsp; b u l b a s a u r </p>
+    <div class="container-fluid">
+      <a href="insomniac\index.html"></a>
     </div>
     <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
