added link to projects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <h5 class="card-title">designs</h5>
                 </div>
             </a>
-            <a class="card text-center" id="card-projects">
+            <a class="card text-center" id="card-projects" href="projects\projects.html">
               <img class="card-img-top" src="shitty_bulbasaur.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">projects</h5>
