--- a/projects/projects.html
+++ b/projects/projects.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel= "stylesheet" href="style.css">
+    <link rel= "stylesheet" href="..\style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <title>about</title>
@@ -25,16 +25,16 @@
         <!--Links-->
         <div id="main-menu" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a class="nav-link" href="index.html">home</a></li>
-            <li><a class="nav-link" href="about.html">about</a></li>
-            <li><a class="nav-link" href="designs\designs.html">designs</a></li>
-            <li><a class="nav-link active" href="projects\projects.html">designs</a></li>
+            <li><a class="nav-link" href="..\index.html">home</a></li>
+            <li><a class="nav-link" href="..\about.html">about</a></li>
+            <li><a class="nav-link" href="..\designs\designs.html">designs</a></li>
+            <li><a class="nav-link active" href="projects\projects.html">projects</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="container-fluid">
-      <a href="insomniac\index.html"></a>
+      <a href="insomniac\index.html">Insomniac</a>
     </div>
     <footer class="footer text-center fixed-bottom">
       <p>Copyright me 2018 pls no copy tho</p>
