--- a/about.html
+++ b/about.html
@@ -27,7 +27,8 @@
           <ul class="nav navbar-nav">
             <li><a class="nav-link" href="index.html">home</a></li>
             <li><a class="nav-link active" href="about.html">about</a></li>
-            <li><a class="nav-link" href="designs.html">designs</a></li>
+            <li><a class="nav-link" href="designs\designs.html">designs</a></li>
+            <li><a class="nav-link" href="projects\projects.html">projects</a></li>
           </ul>
         </div>
       </div>
