--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <p>who gives a fucc lol</p>
+    <div class="container text-center" id="about-text">
+      <p id="desc">Hi there, this page is under construction right now! All you really need to know is, this website kinda sucks right now because I'm a beginner and mostly have no idea what I'm doing. Check back in a bit and maybe there'll be something cool here!</p>
     </div>
     <footer class="footer text-center fixed-bottom">
-      <p>Copyright me 2018 pls no copy tho</p>
+      <p>♡ 2018</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
