--- a/designs/designs.html
+++ b/designs/designs.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel= "stylesheet" href="..\style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 
     <title>designs</title>
     <link rel="icon" href="icon.png">
@@ -33,34 +35,34 @@
         </div>
       </div>
     </nav>
+
     <div class="d-flex align-items-center justify-content-center">
       <div class="jumbotron">
         <div class="carousel slide" data-ride="carousel" id="img_carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
+              <img class="d-block w-100" src="test-1.jpeg" alt="">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
+              <img class="d-block w-100" src="test-2.jpeg" alt="">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="shitty_bulbasaur.png" alt="">
+              <img class="d-block w-100" src="test-3.jpeg" alt="">
             </div>
           </div>
           <a class="carousel-control-next" href="#img_carousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <i class="fas fa-chevron-right"></i>
           </a>
           <a class="carousel-control-prev" href="#img_carousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span>
-            <span class="sr-only">Prev</span>
+            <i class="fas fa-chevron-left"></i>
           </a>
         </div>
       </div>
-      <p class="text-center" id="infbulb">i n f i n i t e &nbsp; b u l b a s a u r </p>
     </div>
+
+
     <footer class="footer text-center fixed-bottom">
-      <p>Copyright me 2018 pls no copy tho</p>
+      <p>♡ 2018</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
