--- a/projects/projects.html
+++ b/projects/projects.html
@@ -33,11 +33,35 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <a href="insomniac\index.html">Insomniac</a>
+    <div class="container" id="cards-projects">
+      <div class="card mx-2" style="width: 18rem;">
+        <img class="card-img-top" src="insomniac\insomniac-title.png" alt="Card image cap">
+        <div class="card-body">
+          <h4>Insomniac</h4>
+          <p class="card-text">A text and image based choose your own adventure game, written in HTML, CSS, JavaScript and jQuery.</p>
+          <a href="insomniac\index.html" class="btn btn-primary">Check it out</a>
+        </div>
+      </div>
+      <div class="card mx-2" style="width: 18rem;">
+        <img class="card-img-top" src="test-5.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <h4>Coming Soon</h4>
+          <p class="card-text">I'll put more stuff here!!</p>
+          <a href="#" class="btn btn-primary">Check it out</a>
+        </div>
+      </div>
+      <div class="card mx-2" style="width: 18rem;">
+        <img class="card-img-top" src="test-6.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <h4>Coming Soon</h4>
+          <p class="card-text">I'll put more stuff here!!</p>
+          <a href="#" class="btn btn-primary">Check it out</a>
+        </div>
+      </div>
     </div>
+
     <footer class="footer text-center fixed-bottom">
-      <p>Copyright me 2018 pls no copy tho</p>
+      <p>♡ 2018</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
