i still need to fix some stuff

--- a/index.html
+++ b/index.html
@@ -19,18 +19,21 @@
       <div class="container-fluid">
         <!--Logo area-->
         <div class="navbar-header">
-          <img src="bitmap.png">
+          <img class="logo" src="bitmap.png">
         </div>
       </div>
     </nav>
     <div class="d-flex justify-content-center align-items-center">
+      <div class="text-about">
+        <h2>Welcome!</h2>
+        <p>Hello there, my name is Alina. I'm currently studying engineering. I like to write in my free time, in several languages such as HTML/CSS, JavaScript, Python, and Plain Ol' English. I also like to draw on occasion, mostly with a mouse (but sometimes with a pencil and paper!). Some other facts about me? I currently have 26 different Spotify playlists. I drive a Volkswagen Golf. If I could travel anywhere right now, it would probably be Big Sur. </p>
+        <p>You can check out some stuff I've made by clicking the bubbles to the right.</p>
+      </div>
+      <div>
+        <span class="sexy_line"></span>
+      </div>
       <div class="jumbotron" id="main-cards">
           <div class="card-deck">
-            <a class="card text-center text-secondary" id="card-about" href="about.html">
-              <div class="card-block">
-                <h3><i class="fas fa-info-circle"></i></h3>
-              </div>
-            </a>
             <a class="card text-center text-secondary" id="card-designs" href="designs\designs.html">
               <div class="card-block">
                 <h3><i class="fas fa-pencil-ruler"></i></h3>
@@ -51,7 +54,7 @@
     </div>
 
     <footer class="footer text-center fixed-bottom">
-      <p>♡ 2018</p>
+      <p>♡ 2019</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
