--- a/designs/designs.html
+++ b/designs/designs.html
@@ -34,6 +34,7 @@
         </div>
       </div>
     </nav>
+    <p style="margin-top: 20px; text-align: center;">placeholder images!!</p>
 
     <div class="d-flex align-items-center justify-content-center">
       <div class="jumbotron">
@@ -61,7 +62,7 @@
 
 
     <footer class="footer text-center fixed-bottom">
-      <p>♡ 2018</p>
+      <p>♡ 2019</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
