--- a/projects/projects.html
+++ b/projects/projects.html
@@ -35,7 +35,7 @@
     </nav>
     <div class="container" id="cards-projects">
       <div class="card mx-2" style="width: 18rem;">
-        <img class="card-img-top" src="insomniac\insomniac-title.png" alt="Card image cap">
+        <img class="card-img-top" src="insomniac\images\insomniac-title.png" alt="Card image cap">
         <div class="card-body">
           <h4>Insomniac</h4>
           <p class="card-text">A text and image based choose your own adventure game, written in HTML, CSS, JavaScript and jQuery.</p>
