big commit - extras page

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -29,6 +29,7 @@
 
             <li><a class="nav-link" href="..\designs\designs.html">designs</a></li>
             <li><a class="nav-link active" href="projects\projects.html">projects</a></li>
+            <li><a class="nav-link" href="..\extras\extras.html">extras</a></li>
           </ul>
         </div>
       </div>
