--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h3><i class="fas fa-code"></i></h3>
               </div>
             </a>
-            <a class="card text-center text-secondary" id="card-other">
+            <a class="card text-center text-secondary" id="card-other" href="extras\extras.html">
               <div class="card-block">
                 <h3><i class="fas fa-question"></i></h3>
               </div>
