big commit - lingomizer

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
       </div>
       <div class="jumbotron" id="main-cards">
           <div class="card-deck">
-            <a class="card text-center text-secondary" id="card-designs" href="designs\designs.html">
+            <a class="card text-center text-secondary" id="card-designs" href="designs\index.html">
               <div class="card-block">
                 <h3><i class="fas fa-pencil-ruler"></i></h3>
               </div>
             </a>
-            <a class="card text-center text-secondary" id="card-projects" href="projects\projects.html">
+            <a class="card text-center text-secondary" id="card-projects" href="projects\index.html">
               <div class="card-block">
                 <h3><i class="fas fa-code"></i></h3>
               </div>
             </a>
-            <a class="card text-center text-secondary" id="card-other" href="extras\extras.html">
+            <a class="card text-center text-secondary" id="card-other" href="extras\index.html">
               <div class="card-block">
                 <h3><i class="fas fa-question"></i></h3>
               </div>
