--- a/projects/index.html
+++ b/projects/index.html
@@ -27,9 +27,9 @@
           <ul class="nav navbar-nav">
             <li><a class="nav-link" href="..\index.html">home</a></li>
 
-            <li><a class="nav-link" href="..\designs\designs.html">designs</a></li>
-            <li><a class="nav-link active" href="projects\projects.html">projects</a></li>
-            <li><a class="nav-link" href="..\extras\extras.html">extras</a></li>
+            <li><a class="nav-link" href="..\designs\index.html">designs</a></li>
+            <li><a class="nav-link active" href="projects\index.html">projects</a></li>
+            <li><a class="nav-link" href="..\extras\index.html">extras</a></li>
           </ul>
         </div>
       </div>
@@ -44,11 +44,11 @@
         </div>
       </div>
       <div class="card mx-2" style="width: 18rem;">
-        <img class="card-img-top" src="test-5.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="lingomizer\snip.png" alt="Card image cap">
         <div class="card-body">
-          <h4>Coming Soon</h4>
-          <p class="card-text">I'll put more stuff here!!</p>
-          <a href="#" class="btn btn-primary">Check it out</a>
+          <h4>Lingomizer</h4>
+          <p class="card-text">A neat little app that automatically selects a word and translates it into another language. HTML, CSS, JS, JSON, API calls.</p>
+          <a href="lingomizer\index.html" class="btn btn-primary">Check it out</a>
         </div>
       </div>
       <div class="card mx-2" style="width: 18rem;">
