--- a/designs/index.html
+++ b/designs/index.html
@@ -7,10 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel= "stylesheet" href="style.css">
+    <link rel= "stylesheet" href="..\style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-    <title>about</title>
+
+    <title>designs</title>
     <link rel="icon" href="icon.png">
   </head>
   <body>
@@ -25,18 +27,43 @@
         <!--Links-->
         <div id="main-menu" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a class="nav-link" href="index.html">home</a></li>
-            <li><a class="nav-link" href="designs\designs.html">designs</a></li>
-            <li><a class="nav-link" href="projects\projects.html">projects</a></li>
+            <li><a class="nav-link" href="..\index.html">home</a></li>
+            <li><a class="nav-link active" href="index.html">designs</a></li>
+            <li><a class="nav-link" href="..\projects\index.html">projects</a></li>
+            <li><a class="nav-link" href="..\extras\index.html">extras</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container text-center" id="about-text">
-      <p id="desc">Hi there, this page is under construction right now! All you really need to know is, this website kinda sucks right now because I'm a beginner and mostly have no idea what I'm doing. Check back in a bit and maybe there'll be something cool here!</p>
+    <p style="margin-top: 20px; text-align: center;">placeholder images!!</p>
+
+    <div class="d-flex align-items-center justify-content-center">
+      <div class="jumbotron">
+        <div class="carousel slide" data-ride="carousel" id="img_carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="test-1.jpeg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="test-2.jpeg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="test-3.jpeg" alt="">
+            </div>
+          </div>
+          <a class="carousel-control-next" href="#img_carousel" role="button" data-slide="next">
+            <i class="fas fa-chevron-right"></i>
+          </a>
+          <a class="carousel-control-prev" href="#img_carousel" role="button" data-slide="prev">
+            <i class="fas fa-chevron-left"></i>
+          </a>
+        </div>
+      </div>
     </div>
+
+
     <footer class="footer text-center fixed-bottom">
-      <p>♡ 2018</p>
+      <p>♡ 2019</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
