--- a/extras/index.html
+++ b/extras/index.html
@@ -28,9 +28,9 @@
         <div id="main-menu" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a class="nav-link" href="..\index.html">home</a></li>
-            <li><a class="nav-link" href="..\designs\designs.html">designs</a></li>
-            <li><a class="nav-link" href="..\projects\projects.html">projects</a></li>
-            <li><a class="nav-link active" href="extras.html">extras</a></li>
+            <li><a class="nav-link" href="..\designs\index.html">designs</a></li>
+            <li><a class="nav-link" href="..\projects\index.html">projects</a></li>
+            <li><a class="nav-link active" href="index.html">extras</a></li>
           </ul>
         </div>
       </div>
