--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <title>about</title>
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="..\icon.png">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="card mx-2" style="width: 18rem;">
-        <img class="card-img-top" src="lingomizer\snip.png" alt="Card image cap">
+        <img class="card-img-top" src="lingomizer\snip.PNG" alt="Card image cap">
         <div class="card-body">
           <h4>Lingomizer</h4>
           <p class="card-text">A neat little app that automatically selects a word and translates it into another language. HTML, CSS, JS, JSON, API calls.</p>
