--- a/designs/index.html
+++ b/designs/index.html
@@ -13,7 +13,7 @@
 
 
     <title>designs</title>
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="..\icon.png">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
