added latest articles

--- a/extras/index.html
+++ b/extras/index.html
@@ -42,6 +42,8 @@
             <ul class="list-group">
               <li class="list-group-item" data-link="fatberg.md"><a href="#">Iron Warrior Article - Fatbergs</a></li>
               <li class="list-group-item" data-link="innovation.md"><a href="#">Iron Warrior Article - Innovation</a></li>
+              <li class="list-group-item" data-link="grammys.md"><a href="#">Iron Warrior Article - Grammys 2019</a></li>
+              <li class="list-group-item" data-link="housing.md"><a href="#">Iron Warrior Article - Waterloo Student Housing</a></li>
             </ul>
           </div>
           <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse2">2018 ▾</a>
