--- a/designs/index.html
+++ b/designs/index.html
@@ -35,29 +35,24 @@
         </div>
       </div>
     </nav>
-    <p style="margin-top: 20px; text-align: center;">placeholder images!!</p>
 
     <div class="d-flex align-items-center justify-content-center">
-      <div class="jumbotron">
-        <div class="carousel slide" data-ride="carousel" id="img_carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="test-1.jpeg" alt="">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="test-2.jpeg" alt="">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="test-3.jpeg" alt="">
-            </div>
+      <div class="jumbotron" id="designs-cards">
+        <div class="container-fluid">
+          <div class="d-flex" id="cont-cards">
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
           </div>
-          <a class="carousel-control-next" href="#img_carousel" role="button" data-slide="next">
-            <i class="fas fa-chevron-right"></i>
-          </a>
-          <a class="carousel-control-prev" href="#img_carousel" role="button" data-slide="prev">
-            <i class="fas fa-chevron-left"></i>
-          </a>
-        </div>
+          <div class="d-flex" id="cont-cards">
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card card-body" id="inner-card">Card</div>
+          </div>
       </div>
     </div>
 
