some cleaning up, homepage change

--- a/designs/index.html
+++ b/designs/index.html
@@ -40,18 +40,12 @@
       <div class="jumbotron" id="designs-cards">
         <div class="container-fluid">
           <div class="d-flex" id="cont-cards">
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-          </div>
-          <div class="d-flex" id="cont-cards">
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
-            <div class="card card-body" id="inner-card">Card</div>
+            <div class="card mx-2" style="width: 18rem;">
+              <img class="card-img-top" src="icarus.png">
+            </div>
+            <div class="card mx-2" style="width: 18rem;">
+              <img class="card-img-top" src="bon.png">
+            </div>
           </div>
       </div>
     </div>
