--- a/index.html
+++ b/index.html
@@ -19,38 +19,27 @@
       <div class="container-fluid">
         <!--Logo area-->
         <div class="navbar-header">
-          <img class="logo" src="bitmap.png">
-          <a class="mr-auto" href="https://github.com/aplennie"><img style="height: 40px; width:auto;" src="github.png"/></a>
+          <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <!--Links-->
+        <div id="main-menu" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a class="nav-link active" href="index.html">home</a></li>
+            <li><a class="nav-link" href="designs\index.html">designs</a></li>
+            <li><a class="nav-link" href="projects\index.html">projects</a></li>
+            <li><a class="nav-link" href="extras\index.html">extras</a></li>
+          </ul>
         </div>
       </div>
     </nav>
     <div class="d-flex justify-content-center align-items-center">
       <div class="text-about">
         <h2 id="welcome">W</h2>
-        <p>Hello there, my name is Alina. I'm currently studying engineering. I like to write in my free time, in several languages such as HTML/CSS, JavaScript, Python, and Plain Ol' English. I also like to draw on occasion, mostly with a mouse (but sometimes with a pencil and paper!). Some other facts about me? I currently have 26 different Spotify playlists. I drive a Volkswagen Golf. If I could travel anywhere right now, it would probably be Big Sur. </p>
-        <p>You can check out some stuff I've made by clicking the bubbles to the right, or click on the GitHub logo at the top!</p>
-      </div>
-      <div>
-        <span class="sexy_line"></span>
-      </div>
-      <div class="jumbotron" id="main-cards">
-          <div class="card-deck">
-            <a class="card text-center text-secondary" id="card-designs" href="designs\index.html">
-              <div class="card-block">
-                <h3><i class="fas fa-pencil-ruler"></i></h3>
-              </div>
-            </a>
-            <a class="card text-center text-secondary" id="card-projects" href="projects\index.html">
-              <div class="card-block">
-                <h3><i class="fas fa-code"></i></h3>
-              </div>
-            </a>
-            <a class="card text-center text-secondary" id="card-other" href="extras\index.html">
-              <div class="card-block">
-                <h3><i class="fas fa-question"></i></h3>
-              </div>
-            </a>
-          </div>
+        <p>  </p>
+        <p>I'm Alina. </p>
+        <p>You can check out some stuff I've made by clicking the links at the top!</p>
       </div>
     </div>
 
