update designs page

--- a/designs/index.html
+++ b/designs/index.html
@@ -36,19 +36,39 @@
       </div>
     </nav>
 
-    <div class="d-flex align-items-center justify-content-center">
-      <div class="jumbotron" id="designs-cards">
-        <div class="container-fluid">
+
+
+    <div class="d-flex my-auto" id="card-master">
+      <a class="btn mt-5 mb-3" data-toggle="collapse" href="#collapse1">Logo Designs ▾</a>
+      <div id="collapse1" class="panel-collapse collapse">
+        <div class="container-fluid my-auto">
           <div class="d-flex" id="cont-cards">
-            <div class="card mx-2" style="width: 18rem;">
-              <img class="card-img-top" src="icarus.png">
+            <div class="card mx-auto" style="width: 20rem;">
+              <img class="card-img my-auto mx-auto" src="icarus.png">
             </div>
-            <div class="card mx-2" style="width: 18rem;">
-              <img class="card-img-top" src="bon.png">
+            <div class="card mx-auto" style="width: 20rem;">
+              <img class="card-img my-auto mx-auto" src="bon.png">
+            </div>
+            <div class="card mx-auto" style="width: 20rem;">
+              <img class="card-img my-auto mx-auto" src="fulllogo.png">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a class="btn mt-5 mb-3" data-toggle="collapse" href="#collapse2">3D Renders ▾</a>
+      <div id="collapse2" class="panel-collapse collapse">
+        <div class="container-fluid my-auto">
+          <div class="d-flex" id="cont-cards">
+            <div class="card mx-auto" style="width: 40rem;">
+              <img class="card-img my-auto mx-auto" src="render-1.jpg">
+            </div>
             </div>
           </div>
       </div>
-    </div>
+
+        </div>
+      </div>
 
 
     <footer class="footer text-center fixed-bottom">
