mobile responsive improvements

--- a/projects/index.html
+++ b/projects/index.html
@@ -34,8 +34,8 @@
         </div>
       </div>
     </nav>
-    <div class="container" id="cards-projects">
-      <div class="card mx-2" style="width: 18rem;">
+    <div class="container mt-1 mb-5" id="cards-projects">
+      <div class="card mx-auto my-2" style="width: 18rem;">
         <img class="card-img-top" src="insomniac\images\insomniac-title.png" alt="Card image cap">
         <div class="card-body">
           <h4>Insomniac</h4>
@@ -43,7 +43,7 @@
           <a href="insomniac\index.html" class="btn btn-primary">Check it out</a>
         </div>
       </div>
-      <div class="card mx-2" style="width: 18rem;">
+      <div class="card mx-auto my-2" style="width: 18rem;">
         <img class="card-img-top" src="lingomizer\snip.PNG" alt="Card image cap">
         <div class="card-body">
           <h4>Lingomizer</h4>
@@ -51,7 +51,7 @@
           <a href="lingomizer\index.html" class="btn btn-primary">Check it out</a>
         </div>
       </div>
-      <div class="card mx-2" style="width: 18rem;">
+      <div class="card mx-auto my-2" style="width: 18rem;">
         <img class="card-img-top" src="test-6.jpeg" alt="Card image cap">
         <div class="card-body">
           <h4>Coming Soon</h4>
@@ -62,7 +62,7 @@
     </div>
 
     <footer class="footer text-center fixed-bottom">
-      <p>♡ 2018</p>
+      <p>♡ 2019</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
