--- a/designs/index.html
+++ b/designs/index.html
@@ -38,29 +38,29 @@
 
 
 
-    <div class="d-flex my-auto" id="card-master">
-      <a class="btn mt-5 mb-3" data-toggle="collapse" href="#collapse1">Logo Designs ▾</a>
+    <div class="container-fluid my-auto mx-auto" id="card-master">
+      <a class="btn mt-3 mb-3" data-toggle="collapse" href="#collapse1">Logo Designs ▾</a>
       <div id="collapse1" class="panel-collapse collapse">
         <div class="container-fluid my-auto">
           <div class="d-flex" id="cont-cards">
-            <div class="card mx-auto" style="width: 20rem;">
+            <div class="card mx-auto my-2 border-0" style="width: 20rem;">
               <img class="card-img my-auto mx-auto" src="icarus.png">
             </div>
-            <div class="card mx-auto" style="width: 20rem;">
+            <div class="card mx-auto my-2 border-0" style="width: 20rem;">
               <img class="card-img my-auto mx-auto" src="bon.png">
             </div>
-            <div class="card mx-auto" style="width: 20rem;">
+            <div class="card mx-auto my-2 border-0" style="width: 20rem;">
               <img class="card-img my-auto mx-auto" src="fulllogo.png">
             </div>
           </div>
         </div>
       </div>
 
-      <a class="btn mt-5 mb-3" data-toggle="collapse" href="#collapse2">3D Renders ▾</a>
+      <a class="btn mt-3 mb-3" data-toggle="collapse" href="#collapse2">3D Renders ▾</a>
       <div id="collapse2" class="panel-collapse collapse">
         <div class="container-fluid my-auto">
           <div class="d-flex" id="cont-cards">
-            <div class="card mx-auto" style="width: 40rem;">
+            <div class="card mx-auto" style="width: auto;">
               <img class="card-img my-auto mx-auto" src="render-1.jpg">
             </div>
             </div>
