--- a/designs/index.html
+++ b/designs/index.html
@@ -49,9 +49,13 @@
             <div class="card mx-auto my-2 border-0" style="width: 20rem;">
               <img class="card-img my-auto mx-auto" src="bon.png">
             </div>
+            <div class="card mx-auto my-2 border-0" style="width: 18rem;">
+              <img class="card-img my-auto mx-auto" src="jumpcut.png">
+            </div>
             <div class="card mx-auto my-2 border-0" style="width: 20rem;">
               <img class="card-img my-auto mx-auto" src="fulllogo.png">
             </div>
+
           </div>
         </div>
       </div>
