--- a/projects/index.html
+++ b/projects/index.html
@@ -39,7 +39,7 @@
         <img class="card-img-top" src="insomniac\images\insomniac-title.png" alt="Card image cap">
         <div class="card-body">
           <h4>Insomniac</h4>
-          <p class="card-text">A text and image based choose your own adventure game, written in HTML, CSS, JavaScript and jQuery.</p>
+          <p class="card-text">A text and image based choose your own adventure game, written in HTML, CSS, JavaScript and jQuery. (note: unfinished)</p>
           <a href="insomniac\index.html" class="btn btn-primary">Check it out</a>
         </div>
       </div>
