--- a/designs/index.html
+++ b/designs/index.html
@@ -63,11 +63,40 @@
       <a class="btn mt-3 mb-3" data-toggle="collapse" href="#collapse2">3D Renders ▾</a>
       <div id="collapse2" class="panel-collapse collapse">
         <div class="container-fluid my-auto">
-          <div class="d-flex" id="cont-cards">
-            <div class="card mx-auto" style="width: auto;">
-              <img class="card-img my-auto mx-auto" src="render-1.jpg">
+          <div id="carousel-designs" class="carousel slide mx-auto">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-designs" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-designs" data-slide-to="1"></li>
+              <li data-target="#carousel-designs" data-slide-to="2"></li>
+              <li data-target="#carousel-designs" data-slide-to="3"></li>
+              <li data-target="#carousel-designs" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner mx-auto">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="render-1.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="render-2.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="render-3.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="render-4.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="render-5.jpg" alt="">
+              </div>
             </div>
-            </div>
+            <a class="carousel-control-prev" href="#carousel-designs" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-designs" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
           </div>
       </div>
 
