added navbar icon

--- a/extras/index.html
+++ b/extras/index.html
@@ -13,7 +13,7 @@
 
 
     <title>designs</title>
-    <link rel="icon" href="..\icon.png">
+    <link rel="icon" href="..\ap-icon.png">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
@@ -32,6 +32,9 @@
             <li><a class="nav-link" href="..\projects\index.html">projects</a></li>
             <li><a class="nav-link active" href="index.html">extras</a></li>
           </ul>
+        </div>
+        <div class="nav navbar-nav navbar-right">
+          <img id="ap-logo" src="..\ap-logo.png" alt="">
         </div>
       </div>
     </nav>
