--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <title>about</title>
-    <link rel="icon" href="..\icon.png">
+    <link rel="icon" href="..\ap-icon.png">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
@@ -31,6 +31,9 @@
             <li><a class="nav-link active" href="projects\index.html">projects</a></li>
             <li><a class="nav-link" href="..\extras\index.html">extras</a></li>
           </ul>
+        </div>
+        <div class="nav navbar-nav navbar-right">
+          <img id="ap-logo" src="..\ap-logo.png" alt="">
         </div>
       </div>
     </nav>
