--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <title>hullo</title>
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="ap-icon.png">
   </head>
   <body>
     <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-light bg-light">
@@ -22,6 +22,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
         </div>
         <!--Links-->
         <div id="main-menu" class="collapse navbar-collapse">
@@ -31,6 +32,9 @@
             <li><a class="nav-link" href="projects\index.html">projects</a></li>
             <li><a class="nav-link" href="extras\index.html">extras</a></li>
           </ul>
+        </div>
+        <div class="nav navbar-nav navbar-right">
+          <img id="ap-logo" src="ap-logo.png" alt="">
         </div>
       </div>
     </nav>
