fixed tab titles

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
     <link rel= "stylesheet" href="..\style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-    <title>about</title>
+    <title>projects</title>
     <link rel="icon" href="..\ap-icon.png">
   </head>
   <body>
