added github link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 id="welcome">W</h2>
         <p>  </p>
         <p>I'm Alina. </p>
-        <p>You can check out some stuff I've made by clicking the links at the top!</p>
+        <p>You can check out some stuff I've made by clicking the links at the top!<br>Or, check out my GitHub <a href="https://github.com/aplennie">here</a>.</p>
       </div>
     </div>
 
