--- a/extras/index.html
+++ b/extras/index.html
@@ -61,8 +61,8 @@
               <li class="list-group-item" data-link="autonomoose.md"><a href="#">Iron Warrior Article - Autonomoose</a></li>
             </ul>
           </div>
-          <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse4">2016 ▾</a>
-          <div id="collapse4" class="panel-collapse collapse">
+            <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse4">2016 ▾</a>
+            <div id="collapse4" class="panel-collapse collapse">
             <ul class="list-group">
               <li class="list-group-item" data-link="trudeau.md"><a href="#">Iron Warrior Article - Trudeau vs. Youth</a></li>
               <li class="list-group-item" data-link="biomimicry.md"><a href="#">Iron Warrior Article - Biomimicry</a></li>
@@ -74,8 +74,8 @@
       <div>
         <span class="sexy_line2"></span>
       </div>
-      <div>
-        <iframe class="iframe-text" src="placeholder.md"></iframe>
+      <div id="textbox">
+
       </div>
     </div>
 
@@ -87,14 +87,22 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+  </script>
 
   <script type="text/javascript">
     const articles = document.querySelectorAll('.list-group-item')
-    const iFrame = document.querySelector('.iframe-text')
+    const textBox = document.querySelector('#textbox')
 
-    function displayArticle() {
-      console.log(this.dataset.link);
-      iFrame.src = this.dataset.link;
+    const fetchArticle = async (articleName) => {
+      const res = await fetch(`https://aplennie.me/extras/${articleName}`);
+      const text = await res.text()
+      return text
+    }
+    async function displayArticle() {
+      const rawData = await fetchArticle(this.dataset.link)
+      textBox.innerHTML = marked(rawData);
     }
 
     articles.forEach(article => article.addEventListener('click', displayArticle));
